--- a/analysis/test_new_ga.ipynb
+++ b/analysis/test_new_ga.ipynb
@@ -145,50 +145,35 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Generation 0, Trees 40, Best cost: 0.19561130, Est: 0.48902826, h: 4.391835\n",
-      "Generation 1, Trees 40, Best cost: 0.17793527, Est: 0.44483819, h: 4.191494\n",
-      "Generation 2, Trees 40, Best cost: 0.17460646, Est: 0.43651614, h: 4.138963\n",
-      "Generation 3, Trees 40, Best cost: 0.17026095, Est: 0.42565236, h: 4.100847\n",
-      "Generation 4, Trees 40, Best cost: 0.16571155, Est: 0.41427889, h: 4.049143\n",
-      "Generation 5, Trees 40, Best cost: 0.16176589, Est: 0.40441470, h: 3.999404\n",
-      "Generation 6, Trees 40, Best cost: 0.16005662, Est: 0.40014157, h: 3.979545\n",
-      "Generation 7, Trees 40, Best cost: 0.15642674, Est: 0.39106686, h: 3.926157\n",
-      "Generation 8, Trees 40, Best cost: 0.15642674, Est: 0.39106686, h: 3.926157\n",
-      "Generation 9, Trees 40, Best cost: 0.15587270, Est: 0.38968177, h: 3.922494\n",
-      "[0.1558727  0.15625444 0.15628953 0.15642674 0.15658386 0.15675451\n",
-      " 0.15754843 0.15945667 0.16465542]\n",
-      "[[0.1956113 ]\n",
-      " [0.17793527]\n",
-      " [0.17460646]\n",
-      " [0.17026095]\n",
-      " [0.16571155]\n",
-      " [0.16176589]\n",
-      " [0.16005662]\n",
-      " [0.15642674]\n",
-      " [0.15642674]\n",
-      " [0.1558727 ]]\n"
+      "Generation 0, Trees 40, Best cost: 0.19611910, Est: 0.49029775, h: 4.400569\n",
+      "Generation 1, Trees 40, Best cost: 0.17941451, Est: 0.44853630, h: 4.204162\n",
+      "[0.17941451 0.17973381 0.17982021 0.18130106 0.18153945 0.18162076\n",
+      " 0.1853161  0.18540427 0.18904816]\n",
+      "[[0.1961191 ]\n",
+      " [0.17941451]]\n"
      ]
     }
    ],
    "source": [
-    "import pack_runner\n",
-    "fastMode = False\n",
-    "ga = pack_ga.GA()\n",
+    "for seed in [0]:\n",
+    "    fastMode = False\n",
+    "    ga = pack_ga.GA()\n",
     "\n",
-    "ga.N_trees_to_do = np.array([40])\n",
-    "ga.n_generations = 10\n",
-    "ga.population_size = 100\n",
-    "ga.selection_size = [1,2,3,4,5,10,20,30,50]\n",
-    "ga.do_legalize = False\n",
-    "#ga.initializer.base_solution.use_fixed_h = True\n",
-    "#ga.initializer.fixed_h = cp.array([4.,0.,0.], dtype=kgs.dtype_cp)\n",
-    "#ga.reduce_h_threshold = 0.01\n",
-    "#ga.reduce_h_amount = 0.03\n",
+    "    ga.N_trees_to_do = np.array([40])\n",
+    "    ga.n_generations = 2\n",
+    "    ga.population_size = 100\n",
+    "    ga.selection_size = [1,2,3,4,5,10,20,30,50]\n",
+    "    ga.do_legalize = False\n",
+    "    #ga.seed = seed\n",
+    "    #ga.initializer.base_solution.use_fixed_h = True\n",
+    "    #ga.initializer.fixed_h = cp.array([4.,0.,0.], dtype=kgs.dtype_cp)\n",
+    "    #ga.reduce_h_threshold = 0.01\n",
+    "    #ga.reduce_h_amount = 0.03\n",
     "\n",
-    "kgs.profiling=False\n",
-    "ga.run()\n",
-    "print(ga.populations[-1].fitness)\n",
-    "print(ga.best_cost_per_generation)"
+    "    kgs.profiling=False\n",
+    "    ga.run()\n",
+    "    print(ga.populations[-1].fitness)\n",
+    "    print(ga.best_cost_per_generation)"
    ]
   },
   {
@@ -198,17 +183,21 @@
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "'module' object is not callable",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mTypeError\u001b[39m                                 Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[3]\u001b[39m\u001b[32m, line 15\u001b[39m\n\u001b[32m     10\u001b[39m runner.ga.selection_size = [\u001b[32m1\u001b[39m,\u001b[32m2\u001b[39m,\u001b[32m3\u001b[39m,\u001b[32m4\u001b[39m,\u001b[32m5\u001b[39m,\u001b[32m10\u001b[39m,\u001b[32m20\u001b[39m,\u001b[32m30\u001b[39m,\u001b[32m50\u001b[39m]\n\u001b[32m     11\u001b[39m \u001b[38;5;66;03m#runner.ga.fixed_h = 4.\u001b[39;00m\n\u001b[32m     12\u001b[39m \u001b[38;5;66;03m#runner.ga.reduce_h_threshold = 0.01\u001b[39;00m\n\u001b[32m     13\u001b[39m \u001b[38;5;66;03m#runner.ga.reduce_h_amount = 0.03\u001b[39;00m\n\u001b[32m---> \u001b[39m\u001b[32m15\u001b[39m \u001b[43mrunner\u001b[49m\u001b[43m.\u001b[49m\u001b[43mrun\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m     16\u001b[39m \u001b[38;5;28mprint\u001b[39m(runner.ga.population.fitness)\n\u001b[32m     17\u001b[39m \u001b[38;5;28mprint\u001b[39m(runner.ga.best_costs_per_generation)\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m/mnt/d/packing/code/analysis/../core/pack_ga2.py:1146\u001b[39m, in \u001b[36mOrchestrator.run\u001b[39m\u001b[34m(self)\u001b[39m\n\u001b[32m   1143\u001b[39m \u001b[38;5;28mself\u001b[39m.ga.seed = \u001b[38;5;28mself\u001b[39m.seed\n\u001b[32m   1145\u001b[39m \u001b[38;5;66;03m# Initialize\u001b[39;00m\n\u001b[32m-> \u001b[39m\u001b[32m1146\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43mga\u001b[49m\u001b[43m.\u001b[49m\u001b[43minitialize\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m   1147\u001b[39m \u001b[38;5;28mself\u001b[39m._relax(\u001b[38;5;28mself\u001b[39m.ga.get_list_for_relaxation())        \n\u001b[32m   1149\u001b[39m \u001b[38;5;28;01mfor\u001b[39;00m i_gen \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;28mself\u001b[39m.n_generations):\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m/mnt/d/packing/code/analysis/../core/pack_ga2.py:886\u001b[39m, in \u001b[36mGA.initialize\u001b[39m\u001b[34m(self)\u001b[39m\n\u001b[32m    884\u001b[39m \u001b[38;5;28mself\u001b[39m.check_constraints(debugging_mode_offset=\u001b[32m2\u001b[39m)        \n\u001b[32m    885\u001b[39m \u001b[38;5;28mself\u001b[39m.fitness_cost.check_constraints()\n\u001b[32m--> \u001b[39m\u001b[32m886\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43m_initialize\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m/mnt/d/packing/code/analysis/../core/pack_ga2.py:957\u001b[39m, in \u001b[36mGASinglePopulation._initialize\u001b[39m\u001b[34m(self)\u001b[39m\n\u001b[32m    955\u001b[39m \u001b[38;5;28mself\u001b[39m.initializer.seed = \u001b[32m200\u001b[39m*\u001b[38;5;28mself\u001b[39m.seed + \u001b[38;5;28mself\u001b[39m.N_trees_to_do \u001b[38;5;66;03m# backwards compatibility        \u001b[39;00m\n\u001b[32m    956\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m.fixed_h \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[32m--> \u001b[39m\u001b[32m957\u001b[39m     \u001b[38;5;28mself\u001b[39m.initializer.fixed_h = cp.array([\u001b[38;5;28mself\u001b[39m.fixed_h*\u001b[43mnp\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43mN_trees_to_do\u001b[49m\u001b[43m)\u001b[49m,\u001b[32m0\u001b[39m,\u001b[32m0\u001b[39m],dtype=kgs.dtype_cp)\n\u001b[32m    958\u001b[39m     \u001b[38;5;28mself\u001b[39m.initializer.base_solution.use_fixed_h = \u001b[38;5;28;01mTrue\u001b[39;00m\n\u001b[32m    959\u001b[39m \u001b[38;5;28mself\u001b[39m.population = \u001b[38;5;28mself\u001b[39m.initializer.initialize_population(\u001b[38;5;28mself\u001b[39m.population_size, \u001b[38;5;28mself\u001b[39m.N_trees_to_do)\n",
-      "\u001b[31mTypeError\u001b[39m: 'module' object is not callable"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Generation 0: Best costs = [[0.196119]]\n",
+      "Generation 1: Best costs = [[0.179415]]\n",
+      "[[0.17941451]\n",
+      " [0.17973381]\n",
+      " [0.17982021]\n",
+      " [0.18130106]\n",
+      " [0.18153945]\n",
+      " [0.18162076]\n",
+      " [0.1853161 ]\n",
+      " [0.18540427]\n",
+      " [0.18904816]]\n",
+      "[[array([0.1961191], dtype=float32), array([0.17941451], dtype=float32)]]\n"
      ]
     }
    ],
@@ -218,12 +207,13 @@
     "\n",
     "kgs.debugging_mode = 2\n",
     "\n",
-    "runner = pack_ga2.Orchestrator(n_generations=10)\n",
+    "runner = pack_ga2.Orchestrator(n_generations=2)\n",
     "runner.ga = pack_ga2.GASinglePopulationOld(N_trees_to_do=40)\n",
     "\n",
     "runner.ga.population_size = 100\n",
     "runner.ga.selection_size = [1,2,3,4,5,10,20,30,50]\n",
-    "#runner.ga.fixed_h = 4.\n",
+    "runner.ga.fixed_h = None\n",
+    "runner.ga.do_legalize = False\n",
     "#runner.ga.reduce_h_threshold = 0.01\n",
     "#runner.ga.reduce_h_amount = 0.03\n",
     "\n",
