First multi implementation

--- a/analysis/test_new_ga.ipynb
+++ b/analysis/test_new_ga.ipynb
@@ -130,6 +130,34 @@
    "execution_count": 2,
    "id": "9de2cb15",
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "# for seed in [0,1]:\n",
+    "#     fastMode = False\n",
+    "#     ga = pack_ga.GA()\n",
+    "\n",
+    "#     ga.N_trees_to_do = np.array([40])\n",
+    "#     ga.n_generations = 2\n",
+    "#     ga.population_size = 100\n",
+    "#     ga.selection_size = [1,2,3,4,5,10,20,30,50]\n",
+    "#     ga.do_legalize = False\n",
+    "#     ga.seed = seed\n",
+    "#     #ga.initializer.base_solution.use_fixed_h = True\n",
+    "#     #ga.initializer.fixed_h = cp.array([4.,0.,0.], dtype=kgs.dtype_cp)\n",
+    "#     #ga.reduce_h_threshold = 0.01\n",
+    "#     #ga.reduce_h_amount = 0.03\n",
+    "\n",
+    "#     kgs.profiling=False\n",
+    "#     ga.run()\n",
+    "#     print(ga.populations[-1].fitness)\n",
+    "#     print(ga.best_cost_per_generation)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "b9d9dcec",
+   "metadata": {},
    "outputs": [
     {
      "name": "stderr",
@@ -145,90 +173,100 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Generation 0, Trees 40, Best cost: 0.19611910, Est: 0.49029775, h: 4.400569\n",
-      "Generation 1, Trees 40, Best cost: 0.17941451, Est: 0.44853630, h: 4.204162\n",
-      "[0.17941451 0.17973381 0.17982021 0.18130106 0.18153945 0.18162076\n",
-      " 0.1853161  0.18540427 0.18904816]\n",
-      "[[0.1961191 ]\n",
-      " [0.17941451]]\n"
+      "hi\n",
+      "Generation 0: Best costs = [[0.191809]]\n",
+      "hi\n",
+      "hi\n",
+      "Generation 1: Best costs = [[0.177319]]\n",
+      "hi\n",
+      "[[0.17731941]\n",
+      " [0.17854637]\n",
+      " [0.1793237 ]\n",
+      " [0.18017377]\n",
+      " [0.18037172]\n",
+      " [0.18170607]\n",
+      " [0.18420616]\n",
+      " [0.18613714]\n",
+      " [0.18649714]]\n",
+      "[[array([0.19180948], dtype=float32), array([0.17731941], dtype=float32)]]\n",
+      "hi\n",
+      "Generation 0: Best costs = [[0.192994]]\n",
+      "hi\n",
+      "hi\n",
+      "Generation 1: Best costs = [[0.18083]]\n",
+      "hi\n",
+      "[[0.18082975]\n",
+      " [0.18124153]\n",
+      " [0.18141717]\n",
+      " [0.18294111]\n",
+      " [0.18346748]\n",
+      " [0.18461516]\n",
+      " [0.18597129]\n",
+      " [0.18944915]\n",
+      " [0.19193609]]\n",
+      "[[array([0.19299375], dtype=float32), array([0.18082975], dtype=float32)]]\n"
      ]
     }
    ],
    "source": [
-    "for seed in [0]:\n",
-    "    fastMode = False\n",
-    "    ga = pack_ga.GA()\n",
+    "for seed in [0,1]:\n",
+    "    import pack_ga2\n",
+    "    importlib.reload(pack_ga2)\n",
     "\n",
-    "    ga.N_trees_to_do = np.array([40])\n",
-    "    ga.n_generations = 2\n",
-    "    ga.population_size = 100\n",
-    "    ga.selection_size = [1,2,3,4,5,10,20,30,50]\n",
-    "    ga.do_legalize = False\n",
-    "    #ga.seed = seed\n",
-    "    #ga.initializer.base_solution.use_fixed_h = True\n",
-    "    #ga.initializer.fixed_h = cp.array([4.,0.,0.], dtype=kgs.dtype_cp)\n",
-    "    #ga.reduce_h_threshold = 0.01\n",
-    "    #ga.reduce_h_amount = 0.03\n",
+    "    kgs.debugging_mode = 2\n",
     "\n",
-    "    kgs.profiling=False\n",
-    "    ga.run()\n",
-    "    print(ga.populations[-1].fitness)\n",
-    "    print(ga.best_cost_per_generation)"
+    "    runner = pack_ga2.Orchestrator(n_generations=2)\n",
+    "    runner.ga = pack_ga2.GASinglePopulationOld(N_trees_to_do=40)\n",
+    "\n",
+    "    runner.ga.population_size = 100\n",
+    "    runner.ga.selection_size = [1,2,3,4,5,10,20,30,50]\n",
+    "    runner.ga.fixed_h = None\n",
+    "    runner.ga.do_legalize = False\n",
+    "    runner.seed = seed\n",
+    "    #runner.ga.reduce_h_threshold = 0.01\n",
+    "    #runner.ga.reduce_h_amount = 0.03\n",
+    "\n",
+    "    runner.run()\n",
+    "    print(runner.ga.population.fitness)\n",
+    "    print(runner.ga.best_costs_per_generation)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "b9d9dcec",
+   "execution_count": 1,
+   "id": "52a0f450",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Generation 0: Best costs = [[0.196119]]\n",
-      "Generation 1: Best costs = [[0.179415]]\n",
-      "[[0.17941451]\n",
-      " [0.17973381]\n",
-      " [0.17982021]\n",
-      " [0.18130106]\n",
-      " [0.18153945]\n",
-      " [0.18162076]\n",
-      " [0.1853161 ]\n",
-      " [0.18540427]\n",
-      " [0.18904816]]\n",
-      "[[array([0.1961191], dtype=float32), array([0.17941451], dtype=float32)]]\n"
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'pack_ga2'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mModuleNotFoundError\u001b[39m                       Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[1]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mpack_ga2\u001b[39;00m\n\u001b[32m      2\u001b[39m importlib.reload(pack_ga2)\n\u001b[32m      3\u001b[39m runner2 = pack_ga2.Orchestrator(n_generations=\u001b[32m2\u001b[39m)\n",
+      "\u001b[31mModuleNotFoundError\u001b[39m: No module named 'pack_ga2'"
      ]
     }
    ],
    "source": [
     "import pack_ga2\n",
     "importlib.reload(pack_ga2)\n",
+    "runner2 = pack_ga2.Orchestrator(n_generations=2)\n",
+    "runner2.ga = pack_ga2.GAMultiSimilar(N=2)\n",
+    "runner2.ga.ga_base = pack_ga2.GASinglePopulationOld(N_trees_to_do=40)\n",
     "\n",
-    "kgs.debugging_mode = 2\n",
+    "runner2.ga.ga_base.population_size = 100\n",
+    "runner2.ga.ga_base.selection_size = [1,2,3,4,5,10,20,30,50]\n",
+    "runner2.ga.ga_base.fixed_h = None\n",
+    "runner2.ga.ga_base.do_legalize = False\n",
+    "runner2.seed = seed\n",
     "\n",
-    "runner = pack_ga2.Orchestrator(n_generations=2)\n",
-    "runner.ga = pack_ga2.GASinglePopulationOld(N_trees_to_do=40)\n",
-    "\n",
-    "runner.ga.population_size = 100\n",
-    "runner.ga.selection_size = [1,2,3,4,5,10,20,30,50]\n",
-    "runner.ga.fixed_h = None\n",
-    "runner.ga.do_legalize = False\n",
-    "#runner.ga.reduce_h_threshold = 0.01\n",
-    "#runner.ga.reduce_h_amount = 0.03\n",
-    "\n",
-    "runner.run()\n",
-    "print(runner.ga.population.fitness)\n",
-    "print(runner.ga.best_costs_per_generation)\n"
+    "runner2.run()\n",
+    "for i in range [0,1]:\n",
+    "    print(runner2.ga.ga_list[i].population.fitness)\n",
+    "    print(runner2.ga.ga_list[i].best_costs_per_generation)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "52a0f450",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
