--- a/analysis/test_new_ga.ipynb
+++ b/analysis/test_new_ga.ipynb
@@ -160,51 +160,14 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/mnt/d/packing/code/analysis/../core/pack_dynamics.py:61: VisibleDeprecationWarning: This function is deprecated and will be removed in a future release. Use the cupy.from_dlpack() array constructor instead.\n",
-      "  x0 = from_dlpack(x0.toDlpack())\n",
-      "/mnt/d/packing/code/analysis/../core/pack_dynamics.py:93: VisibleDeprecationWarning: This function is deprecated and will be removed in a future release. Use the cupy.from_dlpack() array constructor instead.\n",
-      "  return from_dlpack(tmp_cost[:N].toDlpack()), from_dlpack(res.toDlpack())\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "hi\n",
-      "Generation 0: Best costs = [[0.191809]]\n",
-      "hi\n",
-      "hi\n",
-      "Generation 1: Best costs = [[0.177319]]\n",
-      "hi\n",
-      "[[0.17731941]\n",
-      " [0.17854637]\n",
-      " [0.1793237 ]\n",
-      " [0.18017377]\n",
-      " [0.18037172]\n",
-      " [0.18170607]\n",
-      " [0.18420616]\n",
-      " [0.18613714]\n",
-      " [0.18649714]]\n",
-      "[[array([0.19180948], dtype=float32), array([0.17731941], dtype=float32)]]\n",
-      "hi\n",
-      "Generation 0: Best costs = [[0.192994]]\n",
-      "hi\n",
-      "hi\n",
-      "Generation 1: Best costs = [[0.18083]]\n",
-      "hi\n",
-      "[[0.18082975]\n",
-      " [0.18124153]\n",
-      " [0.18141717]\n",
-      " [0.18294111]\n",
-      " [0.18346748]\n",
-      " [0.18461516]\n",
-      " [0.18597129]\n",
-      " [0.18944915]\n",
-      " [0.19193609]]\n",
-      "[[array([0.19299375], dtype=float32), array([0.18082975], dtype=float32)]]\n"
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'pack_ga2'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mModuleNotFoundError\u001b[39m                       Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[3]\u001b[39m\u001b[32m, line 2\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;28;01mfor\u001b[39;00m seed \u001b[38;5;129;01min\u001b[39;00m [\u001b[32m0\u001b[39m,\u001b[32m1\u001b[39m]:\n\u001b[32m----> \u001b[39m\u001b[32m2\u001b[39m     \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mpack_ga2\u001b[39;00m\n\u001b[32m      3\u001b[39m     importlib.reload(pack_ga2)\n\u001b[32m      5\u001b[39m     kgs.debugging_mode = \u001b[32m2\u001b[39m\n",
+      "\u001b[31mModuleNotFoundError\u001b[39m: No module named 'pack_ga2'"
      ]
     }
    ],
@@ -233,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "52a0f450",
    "metadata": {},
    "outputs": [
@@ -244,7 +207,7 @@
      "traceback": [
       "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
       "\u001b[31mModuleNotFoundError\u001b[39m                       Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[1]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mpack_ga2\u001b[39;00m\n\u001b[32m      2\u001b[39m importlib.reload(pack_ga2)\n\u001b[32m      3\u001b[39m runner2 = pack_ga2.Orchestrator(n_generations=\u001b[32m2\u001b[39m)\n",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[2]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mpack_ga2\u001b[39;00m\n\u001b[32m      2\u001b[39m importlib.reload(pack_ga2)\n\u001b[32m      3\u001b[39m runner2 = pack_ga2.Orchestrator(n_generations=\u001b[32m2\u001b[39m)\n",
       "\u001b[31mModuleNotFoundError\u001b[39m: No module named 'pack_ga2'"
      ]
     }
@@ -260,12 +223,14 @@
     "runner2.ga.ga_base.selection_size = [1,2,3,4,5,10,20,30,50]\n",
     "runner2.ga.ga_base.fixed_h = None\n",
     "runner2.ga.ga_base.do_legalize = False\n",
-    "runner2.seed = seed\n",
+    "runner2.ga.do_legalize = False\n",
+    "runner2.seed = 0\n",
     "\n",
     "runner2.run()\n",
-    "for i in range [0,1]:\n",
+    "for i in [0,1]:\n",
     "    print(runner2.ga.ga_list[i].population.fitness)\n",
-    "    print(runner2.ga.ga_list[i].best_costs_per_generation)"
+    "    print(runner2.ga.ga_list[i].best_costs_per_generation)\n",
+    "print(runner2.ga.best_costs_per_generation)"
    ]
   },
   {
