--- a/run_tests.ipynb
+++ b/run_tests.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "743f2f43",
    "metadata": {},
    "outputs": [
@@ -371,7 +371,7 @@
       "✓ Forward results match with and without gradients\n",
       "✓ All 13 cases passed, max gradient error: 5.00e-10\n",
       "✓ polygon_area test PASSED\n",
-      "KERNEL <cupy._core.raw.RawKernel object at 0x7f1887f65840>\n",
+      "KERNEL <cupy._core.raw.RawKernel object at 0x7424dbf5a340>\n",
       "All tests passed.\n"
      ]
     }
@@ -389,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "4b102228",
    "metadata": {},
    "outputs": [
@@ -409,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "599dea53",
    "metadata": {},
    "outputs": [
