Prep new runner, update test

--- a/analysis/test_legalize.ipynb
+++ b/analysis/test_legalize.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "d1471ed0",
    "metadata": {},
    "outputs": [
@@ -34,12 +34,15 @@
     "import time\n",
     "import pack_ga\n",
     "from IPython.display import HTML, display, clear_output\n",
-    "kgs.set_float32(True)\n"
+    "kgs.set_float32(False)\n",
+    "kgs.TREE_EXPANSION = 1+(kgs.TREE_EXPANSION-1)**2\n",
+    "print(kgs.TREE_EXPANSION)\n",
+    "kgs.initalize_tree_globals()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "9de2cb15",
    "metadata": {},
    "outputs": [
@@ -65,13 +68,7 @@
     }
    ],
    "source": [
-    "ga = kgs.dill_load(kgs.code_dir+'../../results/test_ga_result_ga.dill')\n",
-    "pop = ga.populations[0]\n",
-    "pop.select_ids([(np.argmin(pop.fitness))])\n",
-    "sol = pop.configuration\n",
-    "sol.xyt = sol.xyt.astype(kgs.dtype_cp)\n",
-    "sol.h = sol.h.astype(kgs.dtype_cp)\n",
-    "pack_vis_sol.pack_vis_sol(sol)"
+    "ga = kgs.dill_load(kgs.temp_dir+'to_legalize.pickle')"
    ]
   },
   {
