--- a/run_tests.ipynb
+++ b/run_tests.ipynb
@@ -135,11 +135,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Generation 0: Best costs = [[1.928989, 0.020495]]\n",
-      "Generation 1: Best costs = [[1.928989, 0.020495]]\n",
-      "Generation 2: Best costs = [[1.928989, 0.020495]]\n",
-      "Generation 3: Best costs = [[1.928989, 0.020495]]\n",
-      "Generation 4: Best costs = [[1.928989, 0.016376]]\n",
+      "Generation 0: Best costs = [[1.928989, 0.027163]]\n",
+      "Generation 1: Best costs = [[1.928989, 0.023225]]\n",
+      "Generation 2: Best costs = [[1.928989, 0.012859]]\n",
+      "Generation 3: Best costs = [[1.928989, 0.010795]]\n",
+      "Generation 4: Best costs = [[1.928989, 0.010572]]\n",
       "Testing cost computation and gradients\n"
      ]
     },
@@ -371,7 +371,7 @@
       "✓ Forward results match with and without gradients\n",
       "✓ All 13 cases passed, max gradient error: 5.00e-10\n",
       "✓ polygon_area test PASSED\n",
-      "KERNEL <cupy._core.raw.RawKernel object at 0x7c1da51e31c0>\n",
+      "KERNEL <cupy._core.raw.RawKernel object at 0x7d4182be8240>\n",
       "All tests passed.\n"
      ]
     }
@@ -389,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "4b102228",
    "metadata": {},
    "outputs": [
@@ -409,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "599dea53",
    "metadata": {},
    "outputs": [
