--- a/analysis/analyze_ga_results.ipynb
+++ b/analysis/analyze_ga_results.ipynb
@@ -18,7 +18,7 @@
    "outputs": [],
    "source": [
     "# ============================================================\n",
-    "# CONFIGURATION - Set these parameters\n",
+    "# Configuration - Set these parameters\n",
     "# ============================================================\n",
     "\n",
     "# Which runner configuration to analyze\n",
@@ -301,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "extract_data",
    "metadata": {},
    "outputs": [
@@ -1103,14 +1103,14 @@
     "                        # For fixed_h mode, fitness[0] is h value, fitness[1] is cost\n",
     "                        # For non-fixed_h mode, fitness[0] is cost\n",
     "                        # Score = area per tree = (h^2 / N_trees) or extract from fitness\n",
-    "                        if hasattr(champion.configuration, 'use_fixed_h') and champion.configuration.use_fixed_h:\n",
+    "                        if hasattr(champion.phenotype, 'use_fixed_h') and champion.phenotype.use_fixed_h:\n",
     "                            h_val = float(champion_fitness[0])\n",
     "                        else:\n",
-    "                            # Estimate h from configuration\n",
-    "                            h_val = float(champion.configuration.h[0, 0].get())\n",
+    "                            # Estimate h from phenotype\n",
+    "                            h_val = float(champion.phenotype.h[0, 0].get())\n",
     "                        \n",
     "                        # Calculate score as h^2 / N_trees\n",
-    "                        n_trees = champion.configuration.N_trees\n",
+    "                        n_trees = champion.phenotype.N_trees\n",
     "                        score = (h_val ** 2) / n_trees\n",
     "                        scores.append(score)\n",
     "                \n",
@@ -1378,7 +1378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "id": "1qs9a3h6p4w",
    "metadata": {},
    "outputs": [
@@ -1407,7 +1407,7 @@
    ],
    "source": [
     "if len(df) > 0 and 'score_final' in df.columns and not df['score_final'].isna().all():\n",
-    "    # Get score columns for different configurations\n",
+    "    # Get score columns for different phenotypes\n",
     "    score_cols = [col for col in df.columns if col.startswith('score_config_')]\n",
     "    \n",
     "    if len(score_cols) > 0:\n",
@@ -1446,10 +1446,10 @@
     "            x_line = np.linspace(df['cost_final'].min(), df['cost_final'].max(), 100)\n",
     "            ax.plot(x_line, p(x_line), \"r--\", alpha=0.8, linewidth=2)\n",
     "        \n",
-    "        # 3. Scores by configuration (if multiple)\n",
+    "        # 3. Scores by phenotype (if multiple)\n",
     "        ax = axes[2]\n",
     "        if len(score_cols) > 1:\n",
-    "            # Create box plot for different configurations\n",
+    "            # Create box plot for different phenotypes\n",
     "            score_data = []\n",
     "            labels = []\n",
     "            for col in score_cols:\n",
@@ -1460,10 +1460,10 @@
     "            ax.boxplot(score_data, labels=labels, patch_artist=True,\n",
     "                      boxprops=dict(facecolor='steelblue', alpha=0.7))\n",
     "            ax.set_ylabel('Score (Area per Tree)')\n",
-    "            ax.set_title('Scores by Configuration')\n",
+    "            ax.set_title('Scores by phenotype')\n",
     "            ax.grid(True, alpha=0.3, axis='y')\n",
     "        else:\n",
-    "            # Single configuration - show histogram\n",
+    "            # Single phenotype - show histogram\n",
     "            ax.hist(df[score_cols[0]], bins=30, edgecolor='black', alpha=0.7, color='steelblue')\n",
     "            ax.set_xlabel('Score')\n",
     "            ax.set_ylabel('Count')\n",
@@ -1504,7 +1504,7 @@
     "        if 'runtime' in df.columns and not df['runtime'].isna().all():\n",
     "            print(f\"Score vs Runtime: {df[['runtime', 'score_final']].corr().iloc[0, 1]:+.4f}\")\n",
     "    else:\n",
-    "        print(\"No per-configuration score data available\")\n",
+    "        print(\"No per-phenotype score data available\")\n",
     "else:\n",
     "    print(\"No score data available\")"
    ]
