Improved diveristy management and make pack_moves N_tree consistent

--- a/analysis/test_legalize.ipynb
+++ b/analysis/test_legalize.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "id": "d1471ed0",
    "metadata": {},
    "outputs": [
@@ -10,6 +10,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "local\n",
+      "stop final relax at some point\n",
       "9.999999998354667e-11\n"
      ]
     }
@@ -42,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "id": "9de2cb15",
    "metadata": {},
    "outputs": [
@@ -66,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "id": "040b4816",
    "metadata": {},
    "outputs": [],
@@ -107,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "id": "1b658047",
    "metadata": {},
    "outputs": [
@@ -117,7 +119,7 @@
        "np.float64(1.9407627564030725)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -136,14 +138,121 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "5.8346709310125175e-08\n"
+      "init CUDA\n",
+      "Detected GPU compute capability: 8.9 (arch=sm_89)\n",
+      "GPU max threads per block: 1024\n",
+      "=== Compiling kernel variant: crystal ===\n",
+      "Defines: ENABLE_CRYSTAL_AXES, ENABLE_OVERLAP_AREA, ENABLE_SEPARATION\n",
+      "Command: /usr/local/cuda/bin/nvcc -O3 -use_fast_math --extra-device-vectorization --ptxas-options=-v,--warn-on-spills -arch=sm_89 -DENABLE_CRYSTAL_AXES -DENABLE_OVERLAP_AREA -DENABLE_SEPARATION -cubin /mnt/d//packing/temp/pack_cuda_saved.cu -o /mnt/d//packing/temp/pack_cuda_crystal.cubin\n",
+      "ptxas info    : 144 bytes gmem, 2324 bytes cmem[3], 8 bytes cmem[4]\n",
+      "ptxas info    : Compiling entry function 'multi_boundary_distance_list_total' for 'sm_89'\n",
+      "ptxas info    : Function properties for multi_boundary_distance_list_total\n",
+      "    96 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
+      "ptxas info    : Used 38 registers, 96 bytes cumulative stack size, 404 bytes cmem[0], 120 bytes cmem[2]\n",
+      "ptxas info    : Function properties for __internal_trig_reduction_slowpathd\n",
+      "    0 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
+      "ptxas info    : Compiling entry function 'multi_boundary_list_total' for 'sm_89'\n",
+      "ptxas info    : Function properties for multi_boundary_list_total\n",
+      "    528 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
+      "ptxas info    : Used 74 registers, 528 bytes cumulative stack size, 404 bytes cmem[0], 152 bytes cmem[2]\n",
+      "ptxas info    : Function properties for __internal_trig_reduction_slowpathd\n",
+      "    0 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
+      "ptxas info    : Compiling entry function 'multi_overlap_list_total' for 'sm_89'\n",
+      "ptxas info    : Function properties for multi_overlap_list_total\n",
+      "    2144 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
+      "ptxas info    : Used 139 registers, 2144 bytes cumulative stack size, 420 bytes cmem[0], 136 bytes cmem[2]\n",
+      "ptxas info    : Function properties for __internal_trig_reduction_slowpathd\n",
+      "    0 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
+      "\n",
+      "\n",
+      "--- Kernel: multi_overlap_list_total [crystal] ---\n",
+      "  Max threads per block (kernel): 384\n",
+      "  Num registers: 139\n",
+      "  Shared memory (bytes): 0\n",
+      "  Const memory (bytes): 2324\n",
+      "  Local memory (bytes): 2144\n",
+      "=== Compiling kernel variant: no_sep ===\n",
+      "Defines: ENABLE_OVERLAP_AREA\n",
+      "Command: /usr/local/cuda/bin/nvcc -O3 -use_fast_math --extra-device-vectorization --ptxas-options=-v,--warn-on-spills -arch=sm_89 -DENABLE_OVERLAP_AREA -cubin /mnt/d//packing/temp/pack_cuda_saved.cu -o /mnt/d//packing/temp/pack_cuda_no_sep.cubin\n",
+      "ptxas info    : 144 bytes gmem, 2324 bytes cmem[3], 8 bytes cmem[4]\n",
+      "ptxas info    : Compiling entry function 'multi_boundary_distance_list_total' for 'sm_89'\n",
+      "ptxas info    : Function properties for multi_boundary_distance_list_total\n",
+      "    96 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
+      "ptxas info    : Used 38 registers, 96 bytes cumulative stack size, 404 bytes cmem[0], 120 bytes cmem[2]\n",
+      "ptxas info    : Function properties for __internal_trig_reduction_slowpathd\n",
+      "    0 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
+      "ptxas info    : Compiling entry function 'multi_boundary_list_total' for 'sm_89'\n",
+      "ptxas info    : Function properties for multi_boundary_list_total\n",
+      "    528 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
+      "ptxas info    : Used 74 registers, 528 bytes cumulative stack size, 404 bytes cmem[0], 152 bytes cmem[2]\n",
+      "ptxas info    : Function properties for __internal_trig_reduction_slowpathd\n",
+      "    0 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
+      "ptxas info    : Compiling entry function 'multi_overlap_list_total' for 'sm_89'\n",
+      "ptxas info    : Function properties for multi_overlap_list_total\n",
+      "    2080 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
+      "ptxas info    : Used 122 registers, 2080 bytes cumulative stack size, 420 bytes cmem[0], 136 bytes cmem[2]\n",
+      "ptxas info    : Function properties for __internal_trig_reduction_slowpathd\n",
+      "    0 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
+      "\n",
+      "\n",
+      "--- Kernel: multi_overlap_list_total [no_sep] ---\n",
+      "  Max threads per block (kernel): 512\n",
+      "  Num registers: 122\n",
+      "  Shared memory (bytes): 0\n",
+      "  Const memory (bytes): 2324\n",
+      "  Local memory (bytes): 2080\n",
+      "=== Compiling kernel variant: sep ===\n",
+      "Defines: ENABLE_SEPARATION\n",
+      "Command: /usr/local/cuda/bin/nvcc -O3 -use_fast_math --extra-device-vectorization --ptxas-options=-v,--warn-on-spills -arch=sm_89 -DENABLE_SEPARATION -cubin /mnt/d//packing/temp/pack_cuda_saved.cu -o /mnt/d//packing/temp/pack_cuda_sep.cubin\n",
+      "ptxas info    : 144 bytes gmem, 2324 bytes cmem[3], 8 bytes cmem[4]\n",
+      "ptxas info    : Compiling entry function 'multi_boundary_distance_list_total' for 'sm_89'\n",
+      "ptxas info    : Function properties for multi_boundary_distance_list_total\n",
+      "    96 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
+      "ptxas info    : Used 38 registers, 96 bytes cumulative stack size, 404 bytes cmem[0], 120 bytes cmem[2]\n",
+      "ptxas info    : Function properties for __internal_trig_reduction_slowpathd\n",
+      "    0 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
+      "ptxas info    : Compiling entry function 'multi_boundary_list_total' for 'sm_89'\n",
+      "ptxas info    : Function properties for multi_boundary_list_total\n",
+      "    528 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
+      "ptxas info    : Used 74 registers, 528 bytes cumulative stack size, 404 bytes cmem[0], 152 bytes cmem[2]\n",
+      "ptxas info    : Function properties for __internal_trig_reduction_slowpathd\n",
+      "    0 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
+      "ptxas info    : Compiling entry function 'multi_overlap_list_total' for 'sm_89'\n",
+      "ptxas info    : Function properties for multi_overlap_list_total\n",
+      "    336 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
+      "ptxas info    : Used 92 registers, 336 bytes cumulative stack size, 420 bytes cmem[0], 144 bytes cmem[2]\n",
+      "ptxas info    : Function properties for __internal_trig_reduction_slowpathd\n",
+      "    0 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
+      "\n",
+      "\n",
+      "--- Kernel: multi_overlap_list_total [sep] ---\n",
+      "  Max threads per block (kernel): 640\n",
+      "  Num registers: 92\n",
+      "  Shared memory (bytes): 0\n",
+      "  Const memory (bytes): 2324\n",
+      "  Local memory (bytes): 336\n",
+      "\n",
+      "--- Kernel: multi_boundary_list_total ---\n",
+      "  Max threads per block (kernel): 768\n",
+      "  Num registers: 74\n",
+      "  Shared memory (bytes): 0\n",
+      "  Const memory (bytes): 2324\n",
+      "  Local memory (bytes): 528\n",
+      "\n",
+      "--- Kernel: multi_boundary_distance_list_total ---\n",
+      "  Max threads per block (kernel): 1024\n",
+      "  Num registers: 38\n",
+      "  Shared memory (bytes): 0\n",
+      "  Const memory (bytes): 2324\n",
+      "  Local memory (bytes): 96\n",
+      "5.782153873115202e-08\n"
      ]
     }
    ],
    "source": [
     "solxx = copy.deepcopy(sol)\n",
     "solxx.use_fixed_h = True\n",
-    "solxx.h[0,0] = 1.940695 # good: 1.9406959, bad: ?\n",
+    "solxx.h[0,0] = 1.9406959 # good: 1.9406959, bad: 1.9406950\n",
     "import pack_ga\n",
     "ga = pack_ga.GA()\n",
     "cost = copy.deepcopy(ga.fitness_cost)\n",
@@ -170,16 +279,14 @@
     "for _ in range(1):    \n",
     "    solxx = optimizer.run_simulation(solxx)\n",
     "    optimizer.dt /= 2\n",
-    "    print(cost.compute_cost_allocate(solxx)[0].get().item())\n",
-    "    ax = plt.gca()\n",
-    "    ax.set_yscale('log')\n",
+    "    print(cost.compute_cost_allocate(solxx)[0].get().item())    \n",
     "    pack_io.solution_list_to_dataframe([solxx])\n",
     "    \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "ee8ef5bf",
    "metadata": {},
    "outputs": [
