--- a/run_tests.ipynb
+++ b/run_tests.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "743f2f43",
    "metadata": {},
    "outputs": [
@@ -118,8 +118,7 @@
       "  Num registers: 38\n",
       "  Shared memory (bytes): 0\n",
       "  Const memory (bytes): 2324\n",
-      "  Local memory (bytes): 96\n",
-      "2\n"
+      "  Local memory (bytes): 96\n"
      ]
     },
     {
@@ -137,13 +136,9 @@
      "output_type": "stream",
      "text": [
       "Generation 0: Best costs = [[1.928989, 0.024937]]\n",
-      "2\n",
       "Generation 1: Best costs = [[1.928989, 0.008219]]\n",
-      "2\n",
       "Generation 2: Best costs = [[1.928989, 0.008219]]\n",
-      "2\n",
       "Generation 3: Best costs = [[1.928989, 0.008219]]\n",
-      "2\n",
       "Generation 4: Best costs = [[1.928989, 0.008079]]\n",
       "Testing cost computation and gradients\n"
      ]
@@ -287,7 +282,97 @@
       "\n",
       "Testing BoundaryDistanceCost\n",
       "[8.393463985029811]\n",
-      "[8.393463985029813]\n"
+      "[8.393463985029813]\n",
+      "[0.07739210274006779]\n",
+      "[0.07739210274006779]\n",
+      "  Vectorized check for BoundaryDistanceCost\n",
+      "[[ 0.5   0.2   0.4 ]\n",
+      " [ 2.   -0.1  -0.15]]\n",
+      "[8.39346399 0.0773921 ]\n",
+      "  ✓ Vectorized results exactly match individual calls\n",
+      "\n",
+      "Testing BoundaryDistanceCost\n",
+      "[41.967319925149056]\n",
+      "[41.96731992514906]\n",
+      "[0.38696051370033896]\n",
+      "[0.38696051370033896]\n",
+      "  Vectorized check for BoundaryDistanceCost\n",
+      "[[ 0.5   0.2   0.4 ]\n",
+      " [ 2.   -0.1  -0.15]]\n",
+      "[41.96731993  0.38696051]\n",
+      "  ✓ Vectorized results exactly match individual calls\n",
+      "\n",
+      "Testing CollisionCostOverlappingArea\n",
+      "[2.1461860991847606]\n",
+      "[2.146186099184761]\n",
+      "[2.63608491904749]\n",
+      "[2.636084919047489]\n",
+      "[0.03967562067715556]\n",
+      "[0.03967562067715555]\n",
+      "[1.815359415709033]\n",
+      "[1.8153594157090334]\n",
+      "[1.2306033827440457]\n",
+      "[1.230603382744046]\n",
+      "[1.5908309651128032]\n",
+      "[1.590830965112803]\n",
+      "  Vectorized check for CollisionCostOverlappingArea\n",
+      "[[ 0.5   0.2   0.4 ]\n",
+      " [ 2.   -0.1  -0.15]]\n",
+      "[2.1461861  2.63608492]\n",
+      "  ✓ Vectorized results exactly match individual calls\n",
+      "  Vectorized check for CollisionCostOverlappingArea\n",
+      "[[ 0.83333333  1.25        1.04719755]\n",
+      " [-0.41666667  0.41666667  1.04719755]]\n",
+      "[0.03967562 1.81535942]\n",
+      "  ✓ Vectorized results exactly match individual calls\n",
+      "\n",
+      "Testing CostCompound\n",
+      "[1.6064569277644687]\n",
+      "[1.6064569277644687]\n",
+      "[7.517252156315438]\n",
+      "[7.517252156315438]\n",
+      "[1.3955765064284533]\n",
+      "[1.3955765064284533]\n",
+      "[1.4088248646468866]\n",
+      "[1.4088248646468866]\n",
+      "[1.1255344863205303]\n",
+      "[1.1255344863205305]\n",
+      "[1.2745655089753605]\n",
+      "[1.274565508975361]\n",
+      "  Vectorized check for CostCompound\n",
+      "[[ 0.5   0.2   0.4 ]\n",
+      " [ 2.   -0.1  -0.15]]\n",
+      "[1.60645693 7.51725216]\n",
+      "  ✓ Vectorized results exactly match individual calls\n",
+      "  Vectorized check for CostCompound\n",
+      "[[ 0.83333333  1.25        1.04719755]\n",
+      " [-0.41666667  0.41666667  1.04719755]]\n",
+      "[1.39557651 1.40882486]\n",
+      "  ✓ Vectorized results exactly match individual calls\n",
+      "=== Testing line_intersection ===\n",
+      "=== Compiling CUDA Primitives Test Kernels ===\n",
+      "Command: /usr/local/cuda/bin/nvcc -O3 -use_fast_math -arch=sm_89 -ptx /tmp/pack_cuda_primitives_test/primitives_test.cu -o /tmp/pack_cuda_primitives_test/primitives_test.ptx\n",
+      "Compilation successful!\n",
+      "Initialization complete!\n",
+      "Testing 29 cases...\n",
+      "✓ Forward results match with and without gradients\n",
+      "✓ All 29 cases passed, max gradient error: 1.64e-08\n",
+      "\n",
+      "✓ All gradients match finite differences!\n",
+      "✓ line_intersection test PASSED\n",
+      "\n",
+      "=== Testing clip_against_edge ===\n",
+      "Testing 13 cases...\n",
+      "✓ Forward results match with and without gradients\n",
+      "✓ All test cases passed, max gradient error: 7.32e-10\n",
+      "✓ clip_against_edge test PASSED\n",
+      "\n",
+      "=== Testing polygon_area ===\n",
+      "✓ Forward results match with and without gradients\n",
+      "✓ All 13 cases passed, max gradient error: 5.00e-10\n",
+      "✓ polygon_area test PASSED\n",
+      "KERNEL <cupy._core.raw.RawKernel object at 0x78da24398a40>\n",
+      "All tests passed.\n"
      ]
     }
    ],
