--- a/run_tests.ipynb
+++ b/run_tests.ipynb
@@ -47,88 +47,7 @@
       "  Local memory (bytes): 2144\n",
       "=== Compiling kernel variant: no_sep ===\n",
       "Defines: ENABLE_OVERLAP_AREA\n",
-      "Command: /usr/local/cuda/bin/nvcc -O3 -use_fast_math --extra-device-vectorization --ptxas-options=-v,--warn-on-spills -arch=sm_89 -DENABLE_OVERLAP_AREA -cubin /mnt/d//packing/temp/pack_cuda_saved.cu -o /mnt/d//packing/temp/pack_cuda_no_sep.cubin\n",
-      "ptxas info    : 144 bytes gmem, 2324 bytes cmem[3], 8 bytes cmem[4]\n",
-      "ptxas info    : Compiling entry function 'multi_boundary_distance_list_total' for 'sm_89'\n",
-      "ptxas info    : Function properties for multi_boundary_distance_list_total\n",
-      "    96 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
-      "ptxas info    : Used 38 registers, 96 bytes cumulative stack size, 404 bytes cmem[0], 120 bytes cmem[2]\n",
-      "ptxas info    : Function properties for __internal_trig_reduction_slowpathd\n",
-      "    0 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
-      "ptxas info    : Compiling entry function 'multi_boundary_list_total' for 'sm_89'\n",
-      "ptxas info    : Function properties for multi_boundary_list_total\n",
-      "    528 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
-      "ptxas info    : Used 74 registers, 528 bytes cumulative stack size, 404 bytes cmem[0], 152 bytes cmem[2]\n",
-      "ptxas info    : Function properties for __internal_trig_reduction_slowpathd\n",
-      "    0 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
-      "ptxas info    : Compiling entry function 'multi_overlap_list_total' for 'sm_89'\n",
-      "ptxas info    : Function properties for multi_overlap_list_total\n",
-      "    2080 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
-      "ptxas info    : Used 122 registers, 2080 bytes cumulative stack size, 420 bytes cmem[0], 136 bytes cmem[2]\n",
-      "ptxas info    : Function properties for __internal_trig_reduction_slowpathd\n",
-      "    0 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
-      "\n",
-      "\n",
-      "--- Kernel: multi_overlap_list_total [no_sep] ---\n",
-      "  Max threads per block (kernel): 512\n",
-      "  Num registers: 122\n",
-      "  Shared memory (bytes): 0\n",
-      "  Const memory (bytes): 2324\n",
-      "  Local memory (bytes): 2080\n",
-      "=== Compiling kernel variant: sep ===\n",
-      "Defines: ENABLE_SEPARATION\n",
-      "Command: /usr/local/cuda/bin/nvcc -O3 -use_fast_math --extra-device-vectorization --ptxas-options=-v,--warn-on-spills -arch=sm_89 -DENABLE_SEPARATION -cubin /mnt/d//packing/temp/pack_cuda_saved.cu -o /mnt/d//packing/temp/pack_cuda_sep.cubin\n",
-      "ptxas info    : 144 bytes gmem, 2324 bytes cmem[3], 8 bytes cmem[4]\n",
-      "ptxas info    : Compiling entry function 'multi_boundary_distance_list_total' for 'sm_89'\n",
-      "ptxas info    : Function properties for multi_boundary_distance_list_total\n",
-      "    96 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
-      "ptxas info    : Used 38 registers, 96 bytes cumulative stack size, 404 bytes cmem[0], 120 bytes cmem[2]\n",
-      "ptxas info    : Function properties for __internal_trig_reduction_slowpathd\n",
-      "    0 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
-      "ptxas info    : Compiling entry function 'multi_boundary_list_total' for 'sm_89'\n",
-      "ptxas info    : Function properties for multi_boundary_list_total\n",
-      "    528 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
-      "ptxas info    : Used 74 registers, 528 bytes cumulative stack size, 404 bytes cmem[0], 152 bytes cmem[2]\n",
-      "ptxas info    : Function properties for __internal_trig_reduction_slowpathd\n",
-      "    0 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
-      "ptxas info    : Compiling entry function 'multi_overlap_list_total' for 'sm_89'\n",
-      "ptxas info    : Function properties for multi_overlap_list_total\n",
-      "    336 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
-      "ptxas info    : Used 92 registers, 336 bytes cumulative stack size, 420 bytes cmem[0], 144 bytes cmem[2]\n",
-      "ptxas info    : Function properties for __internal_trig_reduction_slowpathd\n",
-      "    0 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
-      "\n",
-      "\n",
-      "--- Kernel: multi_overlap_list_total [sep] ---\n",
-      "  Max threads per block (kernel): 640\n",
-      "  Num registers: 92\n",
-      "  Shared memory (bytes): 0\n",
-      "  Const memory (bytes): 2324\n",
-      "  Local memory (bytes): 336\n",
-      "\n",
-      "--- Kernel: multi_boundary_list_total ---\n",
-      "  Max threads per block (kernel): 768\n",
-      "  Num registers: 74\n",
-      "  Shared memory (bytes): 0\n",
-      "  Const memory (bytes): 2324\n",
-      "  Local memory (bytes): 528\n",
-      "\n",
-      "--- Kernel: multi_boundary_distance_list_total ---\n",
-      "  Max threads per block (kernel): 1024\n",
-      "  Num registers: 38\n",
-      "  Shared memory (bytes): 0\n",
-      "  Const memory (bytes): 2324\n",
-      "  Local memory (bytes): 96\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/mnt/d/packing/code/core/pack_dynamics.py:60: VisibleDeprecationWarning: This function is deprecated and will be removed in a future release. Use the cupy.from_dlpack() array constructor instead.\n",
-      "  x0 = from_dlpack(x0.toDlpack())\n",
-      "/mnt/d/packing/code/core/pack_dynamics.py:92: VisibleDeprecationWarning: This function is deprecated and will be removed in a future release. Use the cupy.from_dlpack() array constructor instead.\n",
-      "  return from_dlpack(tmp_cost[:N].toDlpack()), from_dlpack(res.toDlpack())\n"
+      "Command: /usr/local/cuda/bin/nvcc -O3 -use_fast_math --extra-device-vectorization --ptxas-options=-v,--warn-on-spills -arch=sm_89 -DENABLE_OVERLAP_AREA -cubin /mnt/d//packing/temp/pack_cuda_saved.cu -o /mnt/d//packing/temp/pack_cuda_no_sep.cubin\n"
      ]
     }
    ],
